--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -91,33 +91,38 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/imageView5"
-                    android:layout_width="120dp"
-                    android:layout_height="120dp"
+                <ImageButton
+                    android:id="@+id/imageButton"
+                    android:layout_width="110dp"
+                    android:layout_margin="2dp"
+                    android:layout_height="110dp"
                     android:layout_weight="1"
                     android:background="@drawable/rounded2"
-                    tools:srcCompat="@drawable/garden" />
-
-                <ImageView
-                    android:id="@+id/imageView4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/garden" />
+                <ImageButton
+                    android:id="@+id/imageButton2"
+                    android:layout_width="110dp"
+                    android:layout_margin="2dp"
+                    android:layout_height="110dp"
                     android:layout_weight="1"
-                    tools:srcCompat="@tools:sample/avatars" />
-
-                <ImageView
-                    android:id="@+id/imageView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:background="@drawable/rounded2"
+                    app:srcCompat="@drawable/garden" />
+                <ImageButton
+                    android:id="@+id/imageButton3"
+                    android:layout_width="110dp"
+                    android:layout_margin="2dp"
+                    android:layout_height="110dp"
                     android:layout_weight="1"
-                    tools:srcCompat="@tools:sample/avatars" />
-
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    tools:srcCompat="@tools:sample/avatars" />
+                    android:background="@drawable/rounded2"
+                    app:srcCompat="@drawable/garden" />
+                <ImageButton
+                    android:id="@+id/imageButton4"
+                    android:layout_width="110dp"
+                    android:layout_margin="2dp"
+                    android:layout_height="110dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/rounded2"
+                    app:srcCompat="@drawable/garden" />
 
             </LinearLayout>
             />
