--- a/app/src/main/res/drawable/rounded2.xml
+++ b/app/src/main/res/drawable/rounded2.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#EDEDED" />
+    <solid android:color="#F7F7F7" />
     <stroke
         android:width="2dip"
-         android:color="#EDEDED"/>
+         android:color="#F7F7F7"/>
     <corners android:radius="5dp" />
     <padding
         android:bottom="0dip"
