--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/main_button"
         android:icon="@drawable/main"
-        android:title="@string/main"/>
+        android:title="@string/main"
+         />
 
     <item
         android:id="@+id/list_button"
-        android:icon="@drawable/list"
+                android:icon="@drawable/list"
         android:title="@string/my_list"/>
 
     <item
@@ -18,8 +20,9 @@
 
     <item
         android:id="@+id/profile_button"
+        android:checkable="false"
         android:icon="@drawable/profile"
-        android:title="@string/profile"/>
+        android:title="@string/profile" />
 
     <item
         android:id="@+id/cart_button"
