--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,11 @@
     <LinearLayout
         android:id="@+id/llSearch"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="150dp"
         android:background="#32DA25"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
@@ -36,15 +35,25 @@
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
-            <AutoCompleteTextView
-                android:id="@+id/autoCompleteTextView"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_marginStart="12dp"
+            <SearchView
+                android:layout_width="250dp"
                 android:background="@drawable/rounded"
-                android:dropDownAnchor="@+id/button"
-                android:hint="ПОИСК"
+                android:layout_marginBottom="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_height="35dp" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="43dp"
+                android:layout_height="35dp"
+                android:layout_weight="1"
                 android:text="" />
+
         </LinearLayout>
 
     </LinearLayout>
@@ -73,69 +82,201 @@
     <LinearLayout
         android:id="@+id/llCentre"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/llNavigation"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/llSearch"
         app:layout_constraintStart_toStartOf="parent"
         >
 
-        <HorizontalScrollView
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbars="none">
 
-
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical" >
 
-                <ImageButton
-                    android:id="@+id/imageButton"
-                    android:layout_width="110dp"
-                    android:layout_margin="2dp"
-                    android:layout_height="110dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/rounded2"
-                    app:srcCompat="@drawable/garden" />
-                <ImageButton
-                    android:id="@+id/imageButton2"
-                    android:layout_width="110dp"
-                    android:layout_margin="2dp"
-                    android:layout_height="110dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/rounded2"
-                    app:srcCompat="@drawable/light" />
-                <ImageButton
-                    android:id="@+id/imageButton3"
-                    android:layout_width="110dp"
-                    android:layout_margin="2dp"
-                    android:layout_height="110dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/rounded2"
-                    app:srcCompat="@drawable/tools" />
-                <ImageButton
-                    android:id="@+id/imageButton5"
-                    android:layout_width="110dp"
-                    android:layout_margin="2dp"
-                    android:layout_height="110dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/rounded2"
-                    app:srcCompat="@drawable/res" />
-                <ImageButton
-                    android:id="@+id/imageButton6"
-                    android:layout_width="110dp"
-                    android:layout_margin="2dp"
-                    android:layout_height="110dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/rounded2"
-                    app:srcCompat="@drawable/decor" />
+                <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginBottom="25dp"
+                    android:layout_height="match_parent"
+                    android:scrollbars="none">
 
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+
+                        <ImageButton
+                            android:id="@+id/ibCatalog"
+                            android:layout_width="150dp"
+                            android:layout_height="150dp"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginRight="5dp"
+
+                            android:layout_marginBottom="2dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/rounded3"
+                            app:srcCompat="@drawable/catalog" />
+
+                        <ImageButton
+                            android:id="@+id/ibGarden"
+                            android:layout_width="150dp"
+                            android:layout_height="150dp"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginRight="5dp"
+
+                            android:layout_marginBottom="2dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/rounded2"
+                            app:srcCompat="@drawable/garden" />
+
+                        <ImageButton
+                            android:id="@+id/ibLight"
+                            android:layout_width="150dp"
+                            android:layout_height="150dp"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginRight="5dp"
+
+                            android:layout_marginBottom="2dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/rounded2"
+                            app:srcCompat="@drawable/light" />
+
+                        <ImageButton
+                            android:id="@+id/ibTools"
+                            android:layout_width="150dp"
+                            android:layout_height="150dp"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginRight="5dp"
+
+                            android:layout_marginBottom="2dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/rounded2"
+                            app:srcCompat="@drawable/tools" />
+
+                        <ImageButton
+                            android:id="@+id/ibResource"
+                            android:layout_width="150dp"
+                            android:layout_height="150dp"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginRight="5dp"
+
+                            android:layout_marginBottom="2dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/rounded2"
+                            app:srcCompat="@drawable/res" />
+
+                        <ImageButton
+                            android:id="@+id/ibDecor"
+                            android:layout_width="150dp"
+                            android:layout_height="150dp"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginRight="5dp"
+
+                            android:layout_marginBottom="2dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/rounded2"
+                            app:srcCompat="@drawable/decor" />
+
+                        <ImageButton
+                            android:id="@+id/tbNext"
+                            android:layout_width="150dp"
+                            android:layout_height="150dp"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginRight="10dp"
+
+                            android:layout_marginBottom="2dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/rounded2"
+                            app:srcCompat="@drawable/next" />
+
+                    </LinearLayout>
+                    />
+                </HorizontalScrollView>
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/offers"
+                    android:layout_marginTop="10dp"
+
+                    android:layout_marginBottom="10dp"
+                    android:textColor="@color/black" />
+
+                <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginBottom="25dp"
+                    android:scrollbars="none"
+                    android:layout_height="match_parent">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="150dp"
+                            android:layout_height="150dp">
+
+                            <ImageView
+                                android:id="@+id/ivFirst"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                app:srcCompat="@drawable/cart" />
+
+                            <TextView
+                                android:id="@+id/textView4"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="TextView" />
+                        </androidx.cardview.widget.CardView>
+
+                    </LinearLayout>
+                </HorizontalScrollView>
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:textSize="18dp"
+                    android:layout_marginBottom="10dp"
+                    android:text="@string/best_price"
+                    android:textColor="@color/black" />
+
+                <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginBottom="25dp"
+                    android:scrollbars="none"
+                    android:layout_height="match_parent">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <ImageButton
+                            android:id="@+id/imageButton2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            app:srcCompat="@drawable/garden" />
+                    </LinearLayout>
+                </HorizontalScrollView>
             </LinearLayout>
-            />
-        </HorizontalScrollView>
+        </ScrollView>
 
 
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
