--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -207,9 +207,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/offers"
-                    android:layout_marginTop="10dp"
-
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="25dp"
+                    android:textSize="18dp"
+                    android:layout_marginBottom="25dp"
                     android:textColor="@color/black" />
 
                 <HorizontalScrollView
@@ -222,24 +222,50 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:orientation="vertical">
+                        android:orientation="horizontal">
 
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="150dp"
-                            android:layout_height="150dp">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/iv2"
+                                android:layout_width="150dp"
+                                android:layout_height="150dp"
+                                app:srcCompat="@drawable/cart" />
+
+                            <TextView
+                                android:id="@+id/textView5"
+                                android:layout_width="match_parent"
+                                android:layout_height="35dp"
+                                android:maxLines="2"
+                                android:ellipsize="end"
+                                android:textColor="@color/black"
+                                android:text="7 430 ₽/шт Минимойка Sterwins 135, 135 бар, 420 л/ч, 2 кВт" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
 
                             <ImageView
                                 android:id="@+id/ivFirst"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_width="150dp"
+                                android:layout_height="150dp"
                                 app:srcCompat="@drawable/cart" />
 
                             <TextView
                                 android:id="@+id/textView4"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="TextView" />
-                        </androidx.cardview.widget.CardView>
+                                android:layout_width="150dp"
+                                android:layout_height="35dp"
+                                android:maxLines="2"
+                                android:ellipsize="end"
+                                android:textColor="@color/black"
+                                android:text="122 ₽/шт \n Салфетка, 35x35 см, микрофибра, 4 шт." />
+
+                        </LinearLayout>
 
                     </LinearLayout>
                 </HorizontalScrollView>
@@ -248,9 +274,9 @@
                     android:id="@+id/textView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="25dp"
                     android:textSize="18dp"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginBottom="25dp"
                     android:text="@string/best_price"
                     android:textColor="@color/black" />
 
