--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,10 +36,8 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/llNavigation"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        >
-
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <ScrollView
@@ -78,7 +76,7 @@
 
                         <SearchView
                             android:id="@+id/svSearch"
-                            style="@android:style/Widget.Material.Light.SearchView"
+
                             android:layout_width="0dp"
                             android:layout_height="40dp"
                             android:layout_gravity="bottom"
@@ -86,10 +84,7 @@
                             android:layout_marginEnd="5dp"
                             android:layout_marginBottom="17dp"
                             android:layout_weight="1"
-                            android:background="@drawable/rounded"
-                            android:baselineAligned="false"
-                            android:scrollbarAlwaysDrawHorizontalTrack="false"
-                            android:verticalScrollbarPosition="defaultPosition"></SearchView>
+                            android:background="@drawable/rounded" />
 
                         <ImageButton
                             android:id="@+id/imageButton"
